# Agent-Definition-Files

./: .env.example  .gitignore  Google Internal Onboarding Guide - LLM Agents Framework.md  Onboarding Guide - Product Manager MCP.md  Quick Start Guide.md  README.md
agents/: config_conversion_summary.txt
config/: agent.runtime.yaml  llm.providers.yaml  logging.yaml  memory.yaml  model.routing.yaml  reliability.yaml  safety.yaml  tools.yaml
config/schemas/: agent.schema.json  runtime.schema.json
gcl-templates/0-Inbox/: Building Effective AI Agents.md  What makes Claude Code so damn good (and how to recreate that magic in your agent)!?.md
gcl-templates/memory/: claude.md  memory.md
gcl-templates/projects/: claude_instructions.md  prompt_execution_log.md  prompt_status_report.md  template_management_project.md
ignore/: Agents.gitignore  Available MCP Tools and Models Summary.md  Context Agent and Sub-Agents Definitions.md  README.md  Real-Estate-MCP.gitignore  Workspace-Automation.gitignore  master.gitignore
ignore/agents_runtime/: __init__.py  agent.py  config.py  runner.py
ignore/scripts/: agent_run.py  convert_json_to_toml.py  pyproject.toml
product-manager-mcp/diagrams/: Master Product Development Lifecycle - L6 PM Task Ownership Map (Enhanced Layout).md  Master Product Development Lifecycle - L6 PM Task Ownership Map.md  Master Product Development Lifecycle - Right-Aligned Layout.md  Product Management Documents Diagrams.md
product-manager-mcp/gemini-pm-mcp/: Gemini-CLI-Implementation-Guide.md  Gemini-Internal-Setup-Guide.md  Gemini-PM-MCP-Architecture.md  Gemini-PM-MCP-Overview.md  Gemini-PM-Workflows.md
